--- a/AppointmentScheduling/Views/Account/Login.cshtml
+++ b/AppointmentScheduling/Views/Account/Login.cshtml
@@ -9,28 +9,29 @@
                 <div asp-validation-summary="All" class="text-danger">  </div>
                 <div class="form-group row">
                     <label class="col-md-2" asp-for="Email"></label>
-                    <div class="col-md-10"><input asp-for="Email" class="form-control" /> 
+                    <div class="col-md-10">
+                        <input asp-for="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-md-2" asp-for="Password"></label>
                     <div class="col-md-10">
-                        <input asp-for="Password" class="form-control"/>
+                        <input asp-for="Password" class="form-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-md-10 offset-md-2 checkbox">
                         <label asp-for="RememberMe" class="pr-4 pl-0">
-                            <input asp-for="RememberMe"/>
+                            <input asp-for="RememberMe" />
                         </label>
-                       Remember me?
+                        Remember me?
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-10 offset-md-2">
-                        <input type="submit" value="Login in " class="btn btn-success"/>
+                        <input type="submit" value="Login in " class="btn btn-success" />
                     </div>
                 </div>
                 <p class="col-md-10 offset-md-2">
@@ -40,3 +41,6 @@
         </section>
     </div>
 </div>
+@section Scripts{
+    <partial name="_ValidationScriptsPartial.cshtml" />
+}
