--- a/AppointmentScheduling/Views/Account/Register.cshtml
+++ b/AppointmentScheduling/Views/Account/Register.cshtml
@@ -30,14 +30,14 @@
     <div class="form-group row">
         <label asp-for="ConfirmPassword" class="col-md-2"></label>
         <div class="col-md-10">
-            <input class="form-control" asp-i />
-            <span />
+            <input class="form-control" asp-for="ConfirmPassword" />
+            <span asp-validation-for="ConfirmPassword" class="text-danger"/>
         </div>
     </div>
     <div class="form-group row">
         <label asp-for="RoleName" class="col-md-2"></label>
         <div class="col-md-10">
-            <input asp-for="RoleName" asp-items="@AppointmentScheduling.Utility.Helper.GetRolesForDropDown()" class="form-control" />
+            <select asp-for="RoleName" asp-items="@AppointmentScheduling.Utility.Helper.GetRolesForDropDown()" class="form-control" ></select>
             <span asp-validation-for="RoleName" class="text-danger"></span>
         </div>
     </div>
