AppointmentManagement Ajax, Modals,

--- a/AppointmentScheduling/Views/Appointment/Index.cshtml
+++ b/AppointmentScheduling/Views/Appointment/Index.cshtml
@@ -3,11 +3,12 @@
         @if (User.IsInRole(AppointmentScheduling.Utility.Helper.Admin))
         {
             <div class="form-group row col-2" id="divDoctorList">
-                <label> Select Doctor</label>
-                @Html.DropDownList("doctorId",new SelectList(ViewBag.DoctorList,"Id","Name"), new {@class="form-control select2"})
+                <label>Select Doctor</label>
+                @Html.DropDownList("doctorId",new SelectList(ViewBag.DoctorList,"Id","Name"), new {@class="form-control select2"
+                , @onchange="onDoctorChange();"})
             </div>
         }
-        <div>goodbye</div>
+        <div></div>
         <div id="calendar"></div>
     </div>
 </div>
