--- a/AppointmentScheduling/Views/Shared/_AddEditAppointment.cshtml
+++ b/AppointmentScheduling/Views/Shared/_AddEditAppointment.cshtml
@@ -1,10 +1,18 @@
 ﻿<div class="modal fade" role="dialog" id="appointmentInput" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div>Hello</div>
+           
             <form id="appointmentForm" autocomplete="off" novalidate="novalidate">
                 <div class="modal-header">
-                    <h4 class="modal-title">Add/Edit Appointment</h4>
+                    @if (User.IsInRole(AppointmentScheduling.Utility.Helper.Admin))
+                    {
+                        <h4 class="modal-title">Add/Edit Appointment</h4>
+                    }
+                    else{
+
+                        <h4 class="modal-title">Appointment Details</h4>
+                    }
+
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
@@ -13,11 +21,46 @@
                     </div>
                     <div class="form-group">
                         <label for="description">Descriptions</label>
-                        <textarea type="text" class="form-control" id="title"></textarea>
+                        <textarea type="text" class="form-control" id="description"></textarea>
                     </div>
+                    @if (User.IsInRole(AppointmentScheduling.Utility.Helper.Admin))
+                    {
+                        <div class="form-group">
+                            <label for="title">Select Patient</label>
+                            <select id="patientId" asp-items="@(new SelectList(ViewBag.PatientList,"Id","Name"))" class="form-control"></select>
+                        </div>
+                    }
+                    else
+                    {
+                        @if (User.IsInRole(AppointmentScheduling.Utility.Helper.Doctor))
+                        {
+                             <div class="form-group">
+                                <label for="lblPatientName">Patient Name</label>
+                                <label class="form-control" id="lblPatientName" disabled />
+                            </div>
+                           <div class="form-group">
+                                <label for="lblStatus">Status</label>
+                                <label class="form-control" id="lblStatus" disabled />
+                            </div>
+                        }
+                        @if (User.IsInRole(AppointmentScheduling.Utility.Helper.Patient))
+                        {
+                            <div class="form-group">
+                                <label for="lblDoctorName">Doctor Name</label>
+                                <label class="form-control" id="lblDoctorName" disabled />
+                            </div>
+                            <div class="form-group">
+                                <label for="lblStatus">Status</label>
+                                <label class="form-control" id="lblStatus" disabled />
+                            </div>
+                        }
+       
+                    }
+
+
                     <div class="form-group">
-                        <label for="title">Select Patient</label>
-                        <select id="patientId" asp-items="@(new SelectList(ViewBag.PatientList,"Id","Name"))" class="form-control"></select>
+                        <label for="appointmentDate">Start Date Time</label>
+                        <input id="appointmentDate" class="form-control" />
                     </div>
                     <div class="form-group">
                         <label for="title">Duration</label>
@@ -26,9 +69,17 @@
                     <input type="hidden" id="id" />
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" onclick="onCloseModal()">Close</button>&nbsp;
-                    <button type="button" class="btn btn-success" onclick="onSubmit()">Submit</button>
-
+                    <button type="button" class="btn btn-secondary" onclick="onCloseModal();">Close</button>
+                    @if (User.IsInRole(AppointmentScheduling.Utility.Helper.Admin))
+                    {                    
+                        <button type="button" class="btn btn-success" onclick="onSubmitForm();">Submit</button>
+                        <button type="button" class="btn btn-danger hidden" onclick="onDeleteAppointment();">Delete</button>   
+                    }
+                    @if (User.IsInRole(AppointmentScheduling.Utility.Helper.Doctor))
+                    {
+                       <button type="button" class="btn btn-success" onclick="onConfirm();">Confirm</button>
+                        <button type="button" class="btn btn-danger hidden" onclick="onDeleteAppointment();">Delete</button>  
+                    }
                 </div>
             </form>
         </div>
