--- a/AppointmentScheduling/Views/Account/Register.cshtml
+++ b/AppointmentScheduling/Views/Account/Register.cshtml
@@ -2,7 +2,14 @@
 
 <h2>Sign Up</h2>
 <form method="post" asp-action="Register" asp-controller="Account">
-    <h4>Create a new account</h4>
+    @if (User.IsInRole(AppointmentScheduling.Utility.Helper.Admin))
+    {
+        <h4>Register an admin account</h4>
+    }else
+    {
+        <h4>Create a new account.</h4>
+    }
+
     <hr />
     <div  asp-validation-summary="All" class="text-danger"></div>
 
@@ -38,7 +45,7 @@
     <div class="form-group row">
         <label asp-for="RoleName" class="col-md-2"></label>
         <div class="col-md-10">
-            <select asp-for="RoleName" asp-items="@AppointmentScheduling.Utility.Helper.GetRolesForDropDown()" class="form-control" ></select>
+            <select asp-for="RoleName" asp-items="@AppointmentScheduling.Utility.Helper.GetRolesForDropDown(User.IsInRole(AppointmentScheduling.Utility.Helper.Admin))" class="form-control" ></select>
             <span asp-validation-for="RoleName" class="text-danger"></span>
         </div>
     </div>
